Wed Jun 22 17:37:49 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl.h: Introduced OSSL_BIO_reset macro for PEM/DER
	  fallback scenarios.
	
	* ext/openssl/ossl_pkey_dsa.c
	* ext/openssl/ossl_x509req.c
	* ext/openssl/ossl_pkey_rsa.c
	* ext/openssl/ossl_pkey_ec.c
	* ext/openssl/ossl_ssl_session.c
	* ext/openssl/ossl_x509crl.c
	* ext/openssl/ossl_pkey.c
	* ext/openssl/ossl_pkey_dh.c
	* ext/openssl/ossl_x509cert.c
	* ext/openssl/ossl_pkcs7.c: Use OSSL_BIO_reset.

	* ext/openssl/ossl_ssl.c
	* ext/openssl/ossl_cipher.c
	* ext/openssl/ossl_pkey_ec.c
	* ext/openssl/ossl_pkcs12.c
	* ext/openssl/ossl_ssl_session.c: Replace rb_raise occurences by
	  ossl_raise. This automatically flushes OpenSSL's error queue.

	* ext/openssl/ossl_pkcs7.c: Raise error if DER fallback for parsing
	  fails.

	* test/openssl/test_pkey_ec.rb
	* test/openssl/test_pkey_dsa.rb
	* test/openssl/test_pkey_rsa.rb: Add assertions that OpenSSL.errors is
	  empty.

	* test/openssl/test_pkey_rsa.rb: Remove initial OpenSSL.errors call in
	  test_new.
	  [ Ruby 1.9 - Bug #4885 ] [ruby-core:37134]

Wed Jun 22 15:01:24 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_ssl.c: Use SSL_MODE_RELEASE_BUFFERS if available.
	  Thanks, Eric Wong, for providing the patch.
	  [ Ruby 1.9 - Feature #4672 ] [ruby-core:36127]

Wed Jun 22 14:47:53 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_buffering.rb
	* test/openssl/test_pkcs12.rb: Inherit from Test::Unit::TestCase
	  instead of Mintest::Unit::TestCase. [ruby-core:37275]
	  
Wed Jun 22 12:41:03 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_to_der):
	  OpenSSL::SSL::Session#to_der was broken. Fix buffer handling.

	* test/openssl/test_ssl_session.rb (test_session): Test it.

Wed Jun 22 12:38:52 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* test/openssl/test_ssl_session.rb: Split out SSL::Session related
	  tests from test_ssl.rb
